Fix gap on mobile

--- a/src/scss/base/_responsive.scss
+++ b/src/scss/base/_responsive.scss
@@ -84,6 +84,10 @@
     }
 }
 @include media-breakpoint-down(sm) {
+    .sidebar,
+    .gap-sm{
+	margin-top: 2rem;
+    }
     .page-header .h1 {
 	font-size: 1.2rem;
     }
